examples/test/testpolicy873.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy873
  namespace: namespace262
spec:
  podSelector:
    matchLabels:
      key22: value39
      key7: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value31
          key47: value9
      podSelector:
        matchLabels:
          key20: value17
          key2: value42
          key48: value29
